# Self-bot

./: .replit  README.md  config.json  legion.py  pyproject.toml  requirements.txt
