[tool.poetry]
name = "repl_python3_H4RRY"
version = "0.1.0"
description = ""
authors = ["H4RRY <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.7.4"
colorama = "^0.4.4"
discord = "^1.7.3"
pypresence = "^4.2.0"
utils = "^1.0.1"
youtube_dl = "^2021.6.6"
pymongo = "^3.12.0"
selenium = "^4.0.0"
bs4 = "^0.0.1"
gTTS = "^2.2.3"
aiohttp-proxy = "^0.1.2"
colored = "^1.4.3"
psutil = "^5.8.0"
dhooks = "^1.1.4"
cryptography = "^35.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"